# RustDevelopment

./: .gitignore  Cargo.toml  README.md  Readme.md  index.html  test.jan  test.txt  test2.txt
assets/: level.ldtk
assets/shaders/: aberration.wgsl  material.wgsl  water.wgsl  world.wgsl
assets/textures/: world_tilemap.png~
src/: animation.rs  background.rs  bird.rs  camera.rs  common.rs  craftdebug.rs  document.rs  dust.rs  filetype.rs  game_state.rs  gamestate.rs  highlighting.rs  level.rs  lib.rs  main.rs  main_menu.rs  maineditor.rs  offscreen_deletion.rs  parse_error.rs  parsing.rs  parsing_nodes.rs  physics.rs  pipes.rs  player.rs  row.rs  terminal.rs  tokenization.rs  tokenization_error.rs  tokenizer.rs  ysort.rs
src/chunks/: blocks.rs  chunkgrid.rs  chunkmap.rs  chunkqueue.rs  generation.rs  material.rs  mod.rs  systems.rs  utils.rs
src/compilation/: mod.rs
src/compilation/compilation_error/: mod.rs
src/compilation/parsing/: mod.rs
src/compilation/parsing/nodes/: expression.rs  program_node.rs  statement_node.rs  term.rs
src/compilation/tokenization/: match_token.rs  mod.rs  token.rs  tokens.rs
src/compilation_error/: mod.rs
src/parsing/: mod.rs
src/parsing/nodes/: expression.rs  mod.rs  program_node.rs  statement_node.rs  term.rs
src/tokenization/: mod.rs
